--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.14"
 dependencies = [
+    "bpython>=0.26",
     "click>=8.1.8",
     "config>=0.5.1",
     "darkdetect>=0.8.0",
