--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "returns>=0.25.0",
     "sqlmodel>=0.0.33",
     "sv-ttk>=2.6.1",
+    "tinydb>=4.8.2",
     "ttkbootstrap>=1.14.7",
 ]
 
